src/objects/CountryQuickSelect__c.object
<CustomObject>
    <description>This object is used for WRF-POLK. Maps countries to a quick select identifier for easy and consistent filtering.</description>
    <fields>
        <fullName>Countries__c</fullName>
        <description>The countries being mapped to the provided key.</description>
        <label>Countries</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>All WinFor Countries</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia-Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Canada-Sales</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>China-Sales</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Congo</fullName>
                </value>
                <value>
                    <fullName>Cote Divoire</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Ecuador</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>El Salvador</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QuickSelectKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The key used to lookup countries</description>
        <label>Quick Select Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>What kind of mapping this is.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>World Region</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Country Quick Select</label>
    <nameField>
        <displayFormat>CQS-{0000}</displayFormat>
        <label>Country Quick Select Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Country Quick Selects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>